--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\jose\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\25\\build.properties
