--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionRestaurant
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.6.0.jar=C:\\Users\\jose\\Downloads\\mysql-connector-j-9.6.0\\mysql-connector-j-9.6.0.jar
+file.reference.mysql-connector-j-9.6.0.jar=C:\\Users\\DELL\\Downloads\\mysql-connector-j-9.6.0\\mysql-connector-j-9.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
